# zed

./: Cargo.toml  TODO-steps-4-5.md  rust-toolchain.toml  spec.md
.devcontainer/: Dockerfile
crates/amazon_q/: Cargo.toml
crates/amazon_q/src/: amazon_q.rs  amazon_q_completion_provider.rs
crates/assistant/src/: assistant_settings.rs
crates/aws_auth/: Cargo.toml
crates/aws_auth/src/: aws_auth.rs  provider.rs
crates/aws_auth/src/provider/: sso_provider.rs
crates/aws_auth/src/providers/: sso_provider.rs
crates/aws_auth_ui/: Cargo.toml
crates/aws_auth_ui/src/: aws_auth_ui.rs
crates/bedrock/src/: models.rs
crates/collab/src/: llm.rs
crates/gpui/: Cargo.toml  build.rs
crates/gpui-web/: Cargo.toml
crates/gpui-web/pkg/: gpui_web.d.ts  gpui_web.js  gpui_web_bg.wasm.d.ts  index.html
crates/gpui-web/src/: file_tree_view.rs  gpui_web.rs  web_buffer_store.rs  web_client.rs  web_worktree_store.rs
crates/gpui/proto/: display_tree.proto  scene.proto
crates/gpui/src/: action.rs  app.rs  display_tree.rs  executor.rs  executor_wasm.rs  gpui.rs  platform.rs  profiler.rs  shared_string.rs  subscription.rs  svg_renderer.rs  taffy.rs  util.rs  wasm_shims.rs  window.rs
crates/gpui/src/app/: async_context.rs  context.rs
crates/gpui/src/elements/: animation.rs  div.rs  img.rs  svg.rs  text.rs  uniform_list.rs
crates/gpui/src/platform/: ios.rs  web.rs
crates/gpui/src/platform/ios/: dispatcher.rs  display.rs  platform.rs  window.rs
crates/gpui/src/platform/mac/: metal_atlas.rs
crates/gpui/src/platform/streaming/: mod.rs  platform.rs  window.rs
crates/gpui/src/platform/test/: window.rs
crates/gpui/src/platform/web/: dispatcher.rs  display.rs  platform.rs  text_system.rs  window.rs
crates/gpui/src/platform/web_streaming/: binary_frame.rs  client.rs  launch.rs  mirroring_atlas.rs  mod.rs  proto_encoding.rs  scene_message.rs  server.rs  streaming_atlas.rs  streaming_window.rs
crates/gpui/src/platform/wgpu/: wgpu_atlas.rs
crates/gpui/src/platform/windows/: directx_atlas.rs
crates/gpui/src/text_system/: line.rs
crates/language/src/: language_settings.rs
crates/language_model/: Cargo.toml
crates/language_models/src/provider/: bedrock.rs
crates/media/: Cargo.toml  build.rs
crates/media/src/: bindings.rs  media.rs
crates/proto/: Cargo.toml
crates/proto/src/: macros.rs  typed_envelope.rs
crates/remote_server/: Cargo.toml
crates/remote_server/src/: server.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: rpc.rs
crates/web_inspector/: Cargo.toml
crates/web_inspector/src/: main.rs
crates/web_inspector/static/: inspector.html
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
crates/zed_server/: Cargo.toml  test.html  viewer.html
crates/zed_server/src/: main.rs
crates/zed_web/: Cargo.toml  index.html  serve.py
crates/zed_web/src/: connection.rs  lib.rs  remote_view.rs
docs/src/development/: web-streaming-renderer.md  web-streaming-review.md  web-view-state-architecture.md
web_renderer/: .parcelrc  README.md  index.html  package-lock.json  package.json  tsconfig.json
web_renderer/src/: atlas.ts  binary_decoder.ts  index.ts  input.ts  proto_decoder.ts  protocol.ts  renderer.ts  shaders.wgsl
web_renderer/src/proto/: scene.d.ts  scene.js
web_renderer/static/fixtures/: sample.json
web_renderer/test_server/: Cargo.toml
web_renderer/test_server/src/: main.rs
