[package]
name = "aws_auth"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/aws_auth.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws_http_client.workspace = true
aws-credential-types.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-ssooidc.workspace = true
futures.workspace = true
gpui.workspace = true
paths.workspace = true
release_channel.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["serde", "serde-well-known"]}
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
