[package]
name = "media"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
ctor.workspace = true
foreign-types = "0.5"
metal.workspace = true
objc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-foundation.workspace = true
objc2 = "0.6.0"
objc2-core-graphics.workspace = true
objc2-ui-kit.workspace = true

[build-dependencies]
bindgen = "0.70.0"
