[package]
name = "zed_server"
description = "Streaming server for Zed Web -- serves GPUI display trees over WebSocket"
edition.workspace = true
version = "0.1.0"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "zed_server"

[dependencies]
anyhow.workspace = true
assets.workspace = true
audio.workspace = true
auto_update.workspace = true
breadcrumbs.workspace = true
bytes = "1"
call.workspace = true
channel.workspace = true
clap.workspace = true
client.workspace = true
collab_ui.workspace = true
command_palette.workspace = true
diagnostics.workspace = true
editor.workspace = true
encoding_selector.workspace = true
env_logger.workspace = true
extensions_ui.workspace = true
feedback.workspace = true
file_finder.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
git_hosting_providers.workspace = true
git_ui.workspace = true
go_to_line.workspace = true
gpui = { workspace = true, features = ["headless-web", "font-kit"] }
gpui_tokio.workspace = true
image_viewer.workspace = true
language.workspace = true
language_selector.workspace = true
language_tools.workspace = true
languages = { workspace = true, features = ["load-grammars"] }
line_ending_selector.workspace = true
log.workspace = true
markdown_preview.workspace = true
menu.workspace = true
node_runtime.workspace = true
notifications.workspace = true
outline.workspace = true
parking_lot.workspace = true
outline_panel.workspace = true
paths.workspace = true
project.workspace = true
project_panel.workspace = true
project_symbols.workspace = true
prost.workspace = true
recent_projects.workspace = true
release_channel.workspace = true
reqwest_client.workspace = true
search.workspace = true
semver.workspace = true
serde_json.workspace = true
session = { workspace = true, features = ["test-support"] }
settings.workspace = true
smol.workspace = true
snippet_provider.workspace = true
snippets_ui.workspace = true
tab_switcher.workspace = true
tasks_ui.workspace = true
terminal_view.workspace = true
theme.workspace = true
theme_selector.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
vim.workspace = true
watch.workspace = true
workspace.workspace = true
zed_actions.workspace = true
