[package]
name = "web-renderer-test-server"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
async-tungstenite = { version = "0.31.0", features = ["async-std-runtime"] }
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
tungstenite = "0.27"